<resources>
    <string name="app_name">DeeplinkApp</string>
    <string name="DisableMessage">DisableMessage</string>
    <string name="Label">Activity One</string>
    <string name="Label_two">Activity Two</string>
    <string name="Label_three">Activity three</string>
    <string name="Long_Label">Long Label for showing</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>